--- a/designesapp/templates/card1.html
+++ b/designesapp/templates/card1.html
@@ -12,7 +12,7 @@
 <body style="margin: 0; padding: 0; display: flex; justify-content: center;">
 
   <div style="
-    background-image: url('{% static 'img/card3.jpg' %}');
+    background-image: url('{% static 'images/card3.jpg' %}');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
