--- a/designesapp/templates/card2.html
+++ b/designesapp/templates/card2.html
@@ -20,7 +20,7 @@
        style="
          height: 900px;
          width: 700px;
-         background-image: url('{% static "img/card2.jpg" %}');
+         background-image: url('{% static "images/card2.jpg" %}');
          background-size: cover;
          background-position: center;
          font-family: 'Playfair Display', serif;
