--- a/designesapp/templates/card4.html
+++ b/designesapp/templates/card4.html
@@ -11,7 +11,7 @@
 <body style="background-color:#000; display:flex; justify-content:center; align-items:center; height:100vh;">
 
   <div style="
-      background: url('{% static "img/card6.jpeg" %}') no-repeat center center;
+      background: url('{% static "images/card6.jpeg" %}') no-repeat center center;
       background-size: cover;
       width: 700px;
       height: 900px;
