--- a/designesapp/templates/card5.html
+++ b/designesapp/templates/card5.html
@@ -9,7 +9,7 @@
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Playfair+Display:wght@500&display=swap');
     body {
-      background: url('{% static "img/card4.jpeg" %}') no-repeat center center;
+      background: url('{% static "images/card4.jpeg" %}') no-repeat center center;
       background-size: cover;
       height: 900px;
       width: 500px;
