--- a/designesapp/templates/card6.html
+++ b/designesapp/templates/card6.html
@@ -9,7 +9,7 @@
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Anton&family=Oswald:wght@500&display=swap');
     body {
-      background: url('{% static "img/card11.jpeg" %}') no-repeat center center;
+      background: url('{% static "images/card11.jpeg" %}') no-repeat center center;
       background-size: cover;
       height: 900px;
       width: 500px;
