--- a/designesapp/templates/resume4.html
+++ b/designesapp/templates/resume4.html
@@ -16,7 +16,7 @@
     <!-- Left Section (no top white gap) -->
     <div style="background-color: #5f9c9e; color: white; width: 35%; padding: 30px 30px 30px 30px;">
       <div class="text-center mb-4">
-      <img src="{% static 'img/profile pic.jpeg' %}" class="rounded-circle" style="width: 150px; height: 150px; border: 5px solid white;" alt="Profile" />
+      <img src="{% static 'images/profile pic.jpeg' %}" class="rounded-circle" style="width: 150px; height: 150px; border: 5px solid white;" alt="Profile" />
       </div>
       <h5 style="letter-spacing: 1px;">PROFILE</h5>
       <p style="font-size: 14px; line-height: 1.6;">
