--- a/designesapp/templates/resume5.html
+++ b/designesapp/templates/resume5.html
@@ -12,7 +12,7 @@
   <!-- Top row with photo and name -->
   <div class="d-flex" style="background-color:#c3c5b9; height:180px;">
     <div style="width: 38%;">
-      <img src="{% static 'img/profile pic.jpeg' %}"  class="rounded-circle ms-5" style="height:185px; width:190px; object-fit:cover;" alt="Catrine Ziv">
+      <img src="{% static 'images/profile pic.jpeg' %}"  class="rounded-circle ms-5" style="height:185px; width:190px; object-fit:cover;" alt="Catrine Ziv">
     </div>
     <div class="d-flex flex-column justify-content-center ps-4" style="width: 62%;">
       <h1 class="fw-bold mb-1 " style="font-size: 2.5rem;margin-left:200px">Catrine Ziv</h1>
