--- a/designesapp/templates/resume6.html
+++ b/designesapp/templates/resume6.html
@@ -19,7 +19,7 @@
       <!-- Sidebar -->
       <div class="col-4 p-4 pt-5" style="position: relative;">
         <div class="text-center mb-4" style="margin-top: -80px;">
-          <img src="{% static 'img/profile pic.jpeg' %}"  class="rounded-circle shadow mt-3" style="width: 160px; height: 160px; object-fit: cover; border: 4px solid #fff;" alt="Olivia">
+          <img src="{% static 'images/profile pic.jpeg' %}"  class="rounded-circle shadow mt-3" style="width: 160px; height: 160px; object-fit: cover; border: 4px solid #fff;" alt="Olivia">
         </div>
 
         <h6 class="text-uppercase fw-bold">Professional Skills</h6>
