--- a/designesapp/templates/card3.html
+++ b/designesapp/templates/card3.html
@@ -13,7 +13,7 @@
        style="
          height: 900px; 
          width: 700px; 
-         background-image: url('{% static "img/card5.jpg" %}'); 
+         background-image: url('{% static "images/card5.jpg" %}'); 
          background-size: cover; 
          background-position: center; 
          font-family: 'Georgia', serif; 
