--- a/designesapp/templates/createaccount.html
+++ b/designesapp/templates/createaccount.html
@@ -17,7 +17,7 @@
             <div class="container mt-3">
                 <div class="row">
                     <div class="col-md-1"></div>
-                    <div class="col-md-10">
+                    <div class="col-md-10" data-aos="fade-up">
                         <div class="row bg-white regg">
                             <div class="col-md-4 reg text-center" style="align-content: center;" data-aos="fade-right">
                                 <h1>Welcome User!</h1>
