--- a/designesapp/templates/index.html
+++ b/designesapp/templates/index.html
@@ -10,6 +10,7 @@
     integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
   <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
   <link rel="stylesheet" href="{% static 'css/index.css' %}">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
@@ -68,7 +69,7 @@
             <div class="col-md-6 m-auto slidecontent">
               <span class="fs-1 fw-bold">Better Solutions For Your <br> Work</span>
               <p class="fs-5 fw-bold">We are team of talented designers making websites with Bootstrap</p>
-              <button class="rounded-pill  p-3 mt-1 fw-bold">Get Started</button>
+              <button class="rounded-pill  p-3 mt-1 fw-bold" data-aos="fade-right">Get Started</button>
             </div>
             <div class="col-md-5 m-auto">
               <img src="{% static 'images/slide.png' %}" width="90%" alt="Please wait it takes some time" class="bounce">
@@ -89,7 +90,7 @@
           <div class="col-sm-5"></div>
           <div class="col-sm-2 text-center">
             <h1>
-              ABOUT US
+              ABOUT
             </h1>
           </div>
           <div class="col-md-5"></div>
@@ -252,7 +253,7 @@
       <div class="row" id="login">
         <div class="col-md-3"></div>
         <div class="col-md-6">
-         <div class="form1 py-4">
+         <div class="form1 py-4" data-aos="fade-down">
            <div class="text-center"><h1 class="mt-3">LOGIN</h1></div>
            {% if msg %}
               <div class="alert alert-danger">{{msg}}</div>
@@ -337,7 +338,13 @@
   <script src="{% static 'js/bootstrap.bundle.js' %}"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
-    crossorigin="anonymous"></script>
+    crossorigin="anonymous">
+  </script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+   AOS.init();
+  </script>
+
 </body>
 
 </html>
