--- a/designesapp/static/css/createaccount.css
+++ b/designesapp/static/css/createaccount.css
@@ -59,3 +59,11 @@ body{
 }
 
 /* ===========================create account end========================= */
+
+/* ========================payment page================================ */
+ .paytext{
+    font-family: 'Times New Roman', Times, serif;
+    color: #37517e;
+ }
+
+/* ============================payment page========================= */
