--- a/designesapp/templates/payment.html
+++ b/designesapp/templates/payment.html
@@ -3,12 +3,68 @@
 {% block start %}
 {% load static %}
 
-    <div class="container-fluid mt-5">
-        <div class="row">
-            <div class="col-md-12 paytext text-center">
-                <h3> ❗Oops! You have reached the download limit</h3>
-                <h5>Please complete payment to download more files.</h5>
-            </div>
+<div class="container-fluid mt-5">
+    <div class="row">
+        <div class="col-md-12 paytext text-center">
+            <h3> ❗Oops! You have reached the download limit</h3>
+            <h5>Please complete payment to download more files.</h5>
         </div>
     </div>
+    <div class="row mt-5">
+        <div class="col-md-2"></div>
+        <div class="col-md-8 py-2 text-center pay rounded-5">
+            <div class="row py-5 ">
+                <div class="col-md-8">
+                    <h2 class="fw-bold">You can pay only ₹10 for download more templates</h2>
+                </div>
+                <div class="col-md-4">
+                    <p>Amount=Rs. {{amount}} </p>
+                    <button type="submit" class="p-3 rounded-5 px-4 fw-bold"  id="rzp-button1">Pay ₹10</button>
+
+                    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+                    <script>
+                        var options = {
+                            "key": "{{api_key}}", // Enter the Key ID generated from the Dashboard
+                            "name": "Acme Corp",
+                            "description": "Test Transaction",
+                            "image": "https://example.com/your_logo",
+                            "order_id": "{{order_id}}", //This is a sample Order ID. Pass the id obtained in the response of Step 1
+                            "handler": function (response) {
+                                alert(response.razorpay_payment_id);
+                                alert(response.razorpay_order_id);
+                                alert(response.razorpay_signature)
+                            },
+                            "prefill": {
+                                "name": "Gaurav Kumar",
+                                "email": "gaurav.kumar@example.com",
+                                "contact": "9000090000"
+                            },
+                            "notes": {
+                                "address": "Razorpay Corporate Office"
+                            },
+                            "theme": {
+                                "color": "#3399cc"
+                            }
+                        };
+                        var rzp1 = new Razorpay(options);
+                        rzp1.on('payment.failed', function (response) {
+                            alert(response.error.code);
+                            alert(response.error.description);
+                            alert(response.error.source);
+                            alert(response.error.step);
+                            alert(response.error.reason);
+                            alert(response.error.metadata.order_id);
+                            alert(response.error.metadata.payment_id);
+                        });
+                        document.getElementById('rzp-button1').onclick = function (e) {
+                            rzp1.open();
+                            e.preventDefault();
+                        }
+                    </script>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</div>
 {% endblock %}
