--- a/designesapp/templates/nextpage.html
+++ b/designesapp/templates/nextpage.html
@@ -18,8 +18,26 @@
         <div class="col-sm-4">
             <div class="all-buttons">
                 <a href="{{show.port_link}}"><button class="btn btn-warning"><i class="fa-solid fa-mountain-sun"></i> Live Preview</button></a>
+                <!-- Download: Conditionally Enabled -->
+                {% if is_logged_in %}
                 <a href="{{show.port_zip.url}}" download ><button class="btn btn-primary"><i class="fa-solid fa-cloud-arrow-down"></i> Download</button></a>
+                {% else %}
+                <button class="btn btn-primary" disabled title="Please login to download">
+                    <i class="fa-solid fa-cloud-arrow-down"></i> Download
+                </button>
+
+                {% endif %}
+
+                <!-- Edit: Conditionally Enabled -->
+                {% if is_logged_in %}
                 <a href=""><button class="btn btn-success"><i class="fa-solid fa-user-pen"></i> Edit</button></a>
+                 {% else %}
+
+                <button class="btn btn-success" disabled title="Please login to edit">
+                    <i class="fa-solid fa-user-pen"></i> Edit
+                </button>
+                {% endif %}
+                
                 <p class="mt-4">Design-Exhibition-Space provide easy download of various portfolios, Resumes, and Cards.
                 It faciitates effortless editing and provide edited code for downloading. </p>
             </div>
