--- a/designesapp/templates/nextpage3.html
+++ b/designesapp/templates/nextpage3.html
@@ -17,8 +17,23 @@
         <div class="col-sm-4">
             <div class="all-buttons">
                 <a href="{{show.card_link}}"><button class="btn btn-warning"><i class="fa-solid fa-mountain-sun"></i> Live Preview</button></a>
+                <!--  Download Button: Only for logged in -->
+                {% if is_logged_in %}
                 <a href="{{show.card_file}}"><button class="btn btn-primary"><i class="fa-solid fa-cloud-arrow-down"></i> Download</button></a>
+                {% else %}
+                <button class="btn btn-primary" disabled title="Login required">
+                    <i class="fa-solid fa-cloud-arrow-down"></i> Download
+                </button>
+                {% endif %}
+                <!--  Edit Button: Only for logged in -->
+                {% if is_logged_in %}
                 <a href=""><button class="btn btn-success"><i class="fa-solid fa-user-pen"></i> Edit</button></a>
+                {% else %}
+                
+                <button class="btn btn-success" disabled title="Login required">
+                    <i class="fa-solid fa-user-pen"></i> Edit
+                </button>
+                {% endif %}
                 <p class="mt-4">Design-Exhibition-Space provide easy download of various portfolios, Resumes, and Cards.
                 It faciitates effortless editing and provide edited code for downloading. </p>
             </div>
