--- a/designesapp/templates/nextpage.html
+++ b/designesapp/templates/nextpage.html
@@ -20,7 +20,7 @@
                 <a href="{{show.port_link}}"><button class="btn btn-warning"><i class="fa-solid fa-mountain-sun"></i> Live Preview</button></a>
                 <!-- Download: Conditionally Enabled -->
                 {% if is_logged_in %}
-                <a href="{% url 'portfolio_download' show.port_id %}" download ><button class="btn btn-primary"><i class="fa-solid fa-cloud-arrow-down"></i> Download</button></a>
+                <a href="{{show.port_zip}}" download ><button class="btn btn-primary"><i class="fa-solid fa-cloud-arrow-down"></i> Download</button></a>
                 {% else %}
                 <button class="btn btn-primary" disabled title="Please login to download">
                     <i class="fa-solid fa-cloud-arrow-down"></i> Download
