--- a/designesapp/templates/nextpage3.html
+++ b/designesapp/templates/nextpage3.html
@@ -27,7 +27,7 @@
                 {% endif %}
                 <!--  Edit Button: Only for logged in -->
                 {% if is_logged_in %}
-                <a href=""><button class="btn btn-success"><i class="fa-solid fa-user-pen"></i> Edit</button></a>
+                <a href="{% url 'carddynamicform' %}"><button class="btn btn-success"><i class="fa-solid fa-user-pen"></i> Edit</button></a>
                 {% else %}
                 
                 <button class="btn btn-success" disabled title="Login required">
