--- a/designesapp/templates/nextpage3.html
+++ b/designesapp/templates/nextpage3.html
@@ -34,6 +34,10 @@
                     <i class="fa-solid fa-user-pen"></i> Edit
                 </button>
                 {% endif %}
+                <a href="{% url 'payment' %}">
+                    <button class="btn btn-info" disabled title="Login required">
+                      Pay for more download
+                    </button></a>
                 <p class="mt-4">Design-Exhibition-Space provide easy download of various portfolios, Resumes, and Cards.
                 It faciitates effortless editing and provide edited code for downloading. </p>
             </div>
