--- a/designesapp/templates/resumedynamicform.html
+++ b/designesapp/templates/resumedynamicform.html
@@ -5,8 +5,9 @@
 <head>
     <title>Resume Content Form</title>
 </head>
-<body style="margin: 0; font-family: Arial, sans-serif; background: linear-gradient(to bottom, #e0f0ff, #b3d9ff);">
 
+<body style="margin: 0; font-family: Arial, sans-serif; background: linear-gradient(to bottom, #e0f0ff, #b3d9ff);">
+   
     <h2 style="text-align: center; font-weight: bold; color: #2d3e50; padding: 20px 0; text-shadow: 1px 1px 2px #aaa;">
         Please Share Details Of Your Resume Here
     </h2>
@@ -72,6 +73,6 @@
         </div>
 
     </form>
-
+    <button style="padding:1%; background-color: #33b5ff; color: white; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-weight: 900; border-radius: 25px 25px 25px 25px; border: none; margin: 5px ;float:right;">Back to Home page</button>
 </body>
 </html>
