--- a/designesapp/templates/nextpage.html
+++ b/designesapp/templates/nextpage.html
@@ -30,13 +30,17 @@
 
                 <!-- Edit: Conditionally Enabled -->
                 {% if is_logged_in %}
-                <a href=""><button class="btn btn-success"><i class="fa-solid fa-user-pen"></i> Edit</button></a>
+                <a href="{% url 'resumedynamicform' %}"><button class="btn btn-success"><i class="fa-solid fa-user-pen"></i> Edit</button></a>
                  {% else %}
 
                 <button class="btn btn-success" disabled title="Please login to edit">
                     <i class="fa-solid fa-user-pen"></i> Edit
                 </button>
                 {% endif %}
+                <a href="{% url 'payment' %}">
+                    <button class="btn btn-info" disabled title="Login required">
+                      Pay for more download
+                    </button></a>
                 
                 <p class="mt-4">Design-Exhibition-Space provide easy download of various portfolios, Resumes, and Cards.
                 It faciitates effortless editing and provide edited code for downloading. </p>
